<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ForPay</string>
    <string name="icon_title_recharge2">Recharge\n</string>
    <string name="icon_title_bill_payment2">Bill\nPayment</string>
    <string name="icon_title_electricity_bill_payment2" translatable="false">Electricity Bill\nPayment</string>
    <string name="icon_title_bus_ticket2">Bus\nBooking</string>
    <string name="icon_title_pan_agent2">Pan\nAgent</string>
    <string name="nav_refer_earn" translatable="false">Refer And Earn</string>
    <string name="nav_add_fund" translatable="false">Add Fund</string>
    <string name="nav_premium_plan" translatable="false">Premium Plan</string>
    <string name="nav_term_of_service" translatable="false">Term Of Service</string>
    <string name="nav_change_language" translatable="false">Change Language</string>
    <string name="nav_chat_support" translatable="false">Chat Support</string>
    <string name="nav_add_kyc" translatable="false">Add KYC</string>
    <string name="title_added_to_fav_contact" tools:ignore="MissingTranslation">Added to favourite contact</string>
    <string name="title_removed_from_fav_contact" tools:ignore="MissingTranslation">Removed from favourite contact</string>
    <string name="icon_title_fav_contact" tools:ignore="MissingTranslation">Favourite Contact</string>
    <string name="enterAadhaarNumber" tools:ignore="MissingTranslation">Enter Aadhaar Number</string>
    <string name="enterPanNumber" tools:ignore="MissingTranslation">Enter Pan Number</string>
    <string name="enterAadhaarotp" tools:ignore="MissingTranslation">Enter Aadhaar Otp</string>
    <string name="enterDistributorOtp" tools:ignore="MissingTranslation">Enter Distributor Otp</string>
    <string name="submit" tools:ignore="MissingTranslation">Submit</string>
    <string name="title_bus_route" tools:ignore="MissingTranslation">Bus Route</string>
    <string name="bus_boarding_point" tools:ignore="MissingTranslation">Bording Point</string>
    <string name="bus_dropping_point" tools:ignore="MissingTranslation">Dropping Point</string>
    <string name="kyc_kyc_details" tools:ignore="MissingTranslation">Kyc Details</string>
    <string name="dailyEarning_daily_earning" tools:ignore="MissingTranslation">Daily Earning</string>
    <string name="fromDate" tools:ignore="MissingTranslation">From Date</string>
    <string name="toDate" tools:ignore="MissingTranslation">To Date</string>
    <string name="giftVoucher" tools:ignore="MissingTranslation">Gift Voucher</string>
    <string name="giftMessage" tools:ignore="MissingTranslation">Gift Message</string>
    <string name="giftForYou" tools:ignore="MissingTranslation">Gift For you</string>
    <string name="proceed" translatable="false">Proceed</string>
    <string name="noShopFound" tools:ignore="MissingTranslation">No Shop Found</string>
    <string name="availableBalance" tools:ignore="MissingTranslation">Available Balance</string>
    <string name="addFund" tools:ignore="MissingTranslation">Add Fund</string>
    <string name="support" tools:ignore="MissingTranslation">Support</string>
    <string name="inviteAndEarn" tools:ignore="MissingTranslation">Refer &amp; Earn</string>
    <string name="currentRefer" tools:ignore="MissingTranslation">Current Refer</string>
    <string name="shareReferCodeWithFriends" tools:ignore="MissingTranslation">Share the Code with your \nfriends and get more money \nin your wallet</string>
    <string name="copy" tools:ignore="MissingTranslation">Copy</string>
    <string name="landline" tools:ignore="MissingTranslation">Landline</string>
    <string name="search" translatable="false">Search</string>
    <string name="noDataFound" tools:ignore="MissingTranslation">No Data Found</string>
    <string name="referId" tools:ignore="MissingTranslation">Refer Id</string>
    <string name="continue_" tools:ignore="MissingTranslation">Continue</string>
    <string name="iAcceptPrivacyPolicy" tools:ignore="MissingTranslation">I Accept Privacy Policy  Condition</string>
    <string name="iAcceptTosOfCoupon" tools:ignore="MissingTranslation">I Accept TOS Of Cashback Coupon</string>
    <string name="activeLogin" tools:ignore="MissingTranslation">Active Login</string>
    <string name="recharge">Recharge</string>
    <string name="notifications">Notifications</string>
    <string name="verification_title">Verification..!</string>
    <string name="otpHasBeenSent">Otp has been sent</string>
    <string name="EnterOtp">Enter Otp</string>
    <string name="password">Password</string>
    <string name="enterPassword">Enter Password</string>
    <string name="changeNumber">Change Number</string>
    <string name="incentiveBal">Incentive Bal</string>
    <string name="close">Close</string>
    <string name="productSuggesion">Product Suggestion</string>
    <string name="selectHere...">Select here...</string>
    <string name="recentTransaction">Recent Transaction</string>
    <string name="doYouHaveShop">Do You Have Shop ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enterReferId">Enter Refer Id</string>
    <string name="distributorName">Distributor Name</string>
    <string name="DistributorNameWillDisplayHere">Distributor Name Will Display Here</string>
    <string name="DistributorDistanceWillDisplayHere">Distributor Distance Will Display Here</string>
    <string name="distributorDistnce">Distributor Distance</string>
    <string name="checkName">Check Name</string>
    <string name="icon_title_recharge">Recharge</string>
    <string name="icon_title_moneytransfer">Money Transfer</string>
    <string name="icon_title_bill_payment">Bill Payment</string>
    <string name="icon_title_bus_ticket">Bus Ticket</string>
    <string name="icon_title_pan_agent">Pan Agent</string>
    <string name="icon_title_metro_card">Metro Card</string>
    <string name="icon_title_fashion">Fashion and Life Style</string>
    <string name="icon_title_online_shopping">Online Shopping</string>
    <string name="icon_title_entertainment">Entertainment</string>
    <string name="icon_title_hotel">Hotel</string>
    <string name="icon_title_travel">Travel</string>
    <string name="icon_title_health_and_beauty">Health And Beauty</string>
    <string name="icon_title_recharge_history">Recharge History</string>
    <string name="icon_title_balance_history">Balance History</string>
    <string name="icon_title_bank">Details of Bank</string>
    <string name="icon_title_fund_request">Fund Request</string>
    <string name="icon_title_login_history">Login History</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_logout">Logout</string>
    <string name="tab_history">History</string>
    <string name="language_select">Select Language</string>
    <string name="title_digital_gift_voucher">Digital Gift Voucher</string>
    <string name="title_mobile">MOBILE</string>
    <string name="title_dth">DTH</string>
    <string name="title_postpaid">POSTPAID</string>
    <string name="title_metro">METRO</string>
    <string name="title_select_circle">Select Circle</string>
    <string name="title_select_operator">Select Operator</string>
    <string name="title_dth_number">Dth Number</string>
    <string name="title_amount">Amount</string>
    <string name="title_enter_amount">Enter Amount</string>
    <string name="title_offer_details">Offer Details</string>
    <string name="title_recharge_now">Recharge Now</string>
    <string name="title_proceed">Proceed</string>
    <string name="title_fetch_bill">Fetch Bill</string>
    <string name="title_electricty">Electricity</string>
    <string name="title_gas">Gas</string>
    <string name="title_water">Water</string>
    <string name="title_insurance">Insurance</string>
    <string name="title_landline">Landline</string>
    <string name="title_available_balance">Available Balance</string>
    <string name="title_nav_home">Home</string>
    <string name="title_nav_contact_us">Contact Us</string>
    <string name="title_nav_logout">Logout</string>
    <string name="title_nav_tos">Term Of Service</string>
    <string name="title_nav_privacy_policy">Privacy Policy</string>
    <string name="title_continue">Continue</string>
    <string name="title_resend_otp">Resend Otp</string>
    <string name="title_get_otp_via_call">Get Otp Via Call</string>
    <string name="title_transactionid">Transaction Id </string>
    <string name="title_status">Status </string>
    <string name="title_operator">Operator </string>
    <string name="title_mobile_number">Mobile Number </string>
    <string name="title_order_id">Order id </string>
    <string name="title_recharge_time">Recharge Time </string>
    <string name="title_remark">Remark </string>
    <string name="title_debit_amount">Debit Amount </string>
    <string name="title_bank_account">Bank Account </string>
    <string name="title_name">Name </string>
    <string name="title_complain">Complain</string>
    <string name="title_details">Details</string>
    <string name="title_payment_processing">Payment Processing</string>
    <string name="title_profit">Profit</string>
    <string name="title_buy_psa_coupon">Buy Psa Coupon</string>
    <string name="title_buynow">Buy Now</string>
    <string name="title_alert">Alert</string>
    <string name="title_agree">Agree</string>
    <string name="hint_pin">Enter 4 digit pin</string>
    <string name="hint_coupon_number">Enter Number Of Coupons</string>
    <string name="label_commission_transfer_alert">This process will transfer all your commission balance to main balance .Click on Agree to continue else click outside this box.</string>
    <string name="pay_warning1" tools:ignore="MissingTranslation">* Once order paid can not be cancelled at your end only shop owner can cancel your order</string>
    <string name="pay_warning2" tools:ignore="MissingTranslation">* Delivery charge will not be refunded if order is dispatched</string>
    <string name="pay_warning3" tools:ignore="MissingTranslation">* Product can not cancelled or returned or replaced from our system if order is dispatched from shop owner . To do this you need to contact shop owner on personal basis</string>
    <string name="pay_warning4" tools:ignore="MissingTranslation">* If order does not get delivered within promise time you can cancel order from your end and you will get full refund</string>
    <string name="approved_payment_in_upi_app" tools:ignore="MissingTranslation">Approved Payment in UPI App</string>
    <string name="u2022_go_to_upi_app_or_click_on_notification_from_your_upi_id_linked_mobile_app" tools:ignore="MissingTranslation">• Go to UPI App or click on notification from your UPI id linked mobile app.</string>
    <string name="u2022_check_pending_transactions" tools:ignore="MissingTranslation">• Check Pending transactions.</string>
    <string name="u2022_complete_payment_by_selecting_bank_and_entering_upi_pin" tools:ignore="MissingTranslation">• Complete Payment by selecting bank and entering UPI PIN.</string>
    <string name="order_id_12121" tools:ignore="MissingTranslation">Order Id 12121</string>
    <string name="rs_100" tools:ignore="MissingTranslation">Rs. 100</string>
    <string name="_9000000" tools:ignore="MissingTranslation">9000000</string>
    <string name="_2020_03_01_23_59_59" tools:ignore="MissingTranslation">2020 - 03 - 01 23:59:59</string>
    <string name="success" tools:ignore="MissingTranslation">Success</string>
    <string name="profit_10_20" tools:ignore="MissingTranslation">Profit 10.20</string>
    <string name="success_1000">Success 1000</string>
    <string name="pending_1200">Pending 1200</string>
    <string name="_10000">10000</string>
    <string name="_500">500</string>
    <string name="_0000_00_00">0000-00-00</string>
    <string name="net_profit_500_rs">Net Profit 500 Rs.</string>
    <string name="_1500">1500</string>
</resources>