<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        android:id="@+id/mainLay"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/top_menu"
            android:paddingTop="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_toStartOf="@id/txt_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_id_12121"
                android:id="@+id/txt_order_id"
                android:textColor="@color/orange_new"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_11sdp"/>

            <TextView
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs_100"
                android:id="@+id/txt_amount"
                android:textColor="@color/green_new"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_14sdp"/>

        </RelativeLayout>

        <RelativeLayout
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_38sdp"
                android:layout_height="@dimen/_38sdp"
                android:src="@drawable/icon_place_holder"
                android:layerType="software"
                android:id="@+id/recent_icon"/>


            <LinearLayout
                android:layout_toStartOf="@id/profit_data"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@id/recent_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/transaction_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_9000000"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/transaction_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2020_03_01_23_59_59"
                    android:textStyle="bold"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/hint_text"
                    android:fontFamily="sans-serif"/>

            </LinearLayout>

            <LinearLayout
                android:gravity="end"
                android:layout_alignParentEnd="true"
                android:id="@+id/profit_data"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/transaction_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/success"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/hint_text"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/profit_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profit_10_20"
                    android:textSize="@dimen/_9sdp"
                    android:textColor="@color/gray"
                    android:fontFamily="sans-serif"/>

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/gray_bg"/>
    </LinearLayout>
</layout>
