<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_corner_bg"
                android:padding="@dimen/_15sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-: Warning :-"
                    android:textColor="@color/red"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sf_regular"
                    android:textSize="@dimen/_11sdp"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_warning1"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sf_regular"
                    android:textSize="@dimen/_11sdp"
                    android:layout_marginTop="@dimen/_6sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_warning2"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sf_regular"
                    android:textSize="@dimen/_11sdp"
                    android:layout_marginTop="@dimen/_6sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_warning3"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sf_regular"
                    android:textSize="@dimen/_11sdp"
                    android:layout_marginTop="@dimen/_6sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_warning4"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sf_regular"
                    android:textSize="@dimen/_11sdp"
                    android:layout_marginTop="@dimen/_6sdp"/>

                <TextView
                    android:id="@+id/ok"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="OK"
                    android:lineSpacingExtra="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/sf_bold"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/white_less_corner_bg"
                    android:backgroundTint="@color/purple"
                    android:textColor="@color/white"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_15sdp"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</layout>